# Aviation_Data_Pipeline

./: .gitignore  README.md  __init__.py  config.py  db_operation.py  etl_dag.py  get_data.py  main.py  pyproject.toml  transform.ipynb
aviation_package/: __init__.py  create_cleaned_table.sql  create_table.sql  data_cleaning.py  db_connection.py  db_operation.py  get_data.py  insert_cleaned_data_query.sql  insert_query.sql
dags/: aviation_etl_dag.py
